--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </header>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate non illo vitae magnam, culpa ipsam, accusantium aut esse rerum reiciendis atque possimus, magni corrupti voluptatum. Nesciunt ullam aliquid odit aut.</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate non illo vitae magnam, culpa ipsam, accusantium aut esse rerum reiciendis atque possimus, magni corrupti voluptatum. Nesciunt ullam aliquid odit aut.</p>
     </div>
 </body>
 
