--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body>
     <header>
-        <h1>Hello</h1>
+        <h1>How to say "Hello World" in Java</h1>
     </header>
     <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate non illo vitae magnam, culpa ipsam, accusantium aut esse rerum reiciendis atque possimus, magni corrupti voluptatum. Nesciunt ullam aliquid odit aut.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate non illo vitae magnam, culpa ipsam, accusantium aut esse rerum reiciendis atque possimus, magni corrupti voluptatum. Nesciunt ullam aliquid odit aut.</p>
+        <p>public class HelloWorld { static String msg; public static void main(String[] args) { msg = "Hello World"; System.out.println(msg); } }
+        </p>
     </div>
 </body>
 
