--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 
 <body>
     <header>
-        <h1>How to say "Hello World" in Java</h1>
+        <h1>How to say "Hello World" in Java using a </h1>
     </header>
     <div>
-        <p>public class HelloWorld { static String msg; public static void main(String[] args) { msg = "Hello World"; System.out.println(msg); } }
-        </p>
+        <p>public class HelloWorld { </p>
+        <br>
+        <p>static String msg;</p>
+        <br>
+        <p> public static void main(String[] args) {</p>
+        <p>msg = "Hello World";</p>
+        <p>System.out.println(msg); } </p>
+        <p>}</p>
     </div>
 </body>
 
